--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
@@ -28,7 +28,8 @@
        .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Index", "rt_active_info", new { sessionName = c.SessionName }), "fas fa-file", "", "Open rt_active info for session", OpenNewWindow: true).ToHtmlString() +
                         ((c.ServiceName != "NOT FOUND") ? (
                         (c.ServiceStatus != "Running") ? MyHtmlHelpers.IconActionLink(Url.Action("SetServiceState", "c_service_setup", new { ServiceName = c.ServiceName, State = 1 }), "far fa-play-circle", "", "Start service", classes: "JQresultTriggerBtn").ToHtmlString() :
-                        MyHtmlHelpers.IconActionLink(Url.Action("SetServiceState", "c_service_setup", new { ServiceName = c.ServiceName, State = 2 }), "far fa-stop-circle", "", "Stop service", classes: "text-danger JQresultTriggerBtn").ToHtmlString()
+                        MyHtmlHelpers.IconActionLink(Url.Action("SetServiceState", "c_service_setup", new { ServiceName = c.ServiceName, State = 2 }), "far fa-stop-circle", "", "Stop service", classes: "text-danger JQresultTriggerBtn").ToHtmlString() +
+                        MyHtmlHelpers.IconActionLink(Url.Action("GetControlerStats", "Client", new { ServiceName = c.ServiceName}), "fas fa-terminal", "", "Open Client", OpenNewWindow: true).ToHtmlString()
                         ) : "")
            );
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover tablesaw-on").RowCss(row => (row.ServiceStatus == "Running" && row.OKcontrollerCount != row.controllerCount) ? "ani_BlinkPink" : "")
