Admin Qteam Config page

--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -63,47 +63,30 @@
     </div>
     <p>
     <p>
-        <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alert-group-contains=UL&h_alert-rows=20" class="btn btn-primary btn-sm"> pss en spot positie alert &raquo;</a>
+        <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alert-group-contains=UL&h_alert-rows=20" class="btn btn-primary btn-sm"> pss en spot positie alert</a>
     <p>
+        <a href="~/Welding/Qteam/_SearchplanNbr" class="btn btn-primary btn-sm">Search a plannumber ultralog</a>
     <p>
+        <a href="~/Welding/StoringsIngave/Index" class="btn btn-primary btn-sm">StoringsIngave =test=</a>
 
-        <a href="~/Welding/Qteam/_SearchplanNbr" class="btn btn-primary btn-sm">Search a plannumber ultralog&raquo;</a>
-
-
-
-
-        @*This card is default collapsed see fa-rotate-180 and display:none*@
-        <div class="card">
-            <div class="card-header bg-danger">
-                <h5 class="card-title text-white">
-                    Ultralog Config
-                    <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
-                </h5>
-            </div>
-            <div class="card-body" style="display:none">
-
-    <p>
-        <a href="~/Welding/Inspectionplans/Index" class="btn btn-primary btn-sm">Config Ul plannen&raquo;</a>
-        Beheer van de DB plannen
     </p>
 
-    <a href="~/Welding/ULplan_start/Index" class="btn btn-primary btn-sm">Plan Busy&raquo;</a>
-    Beheer van de DB plan busy list
-    </p>
-    <a href="~/Welding/StoringsIngave/Index" class="btn btn-primary btn-sm">StoringsIngave ===test===&raquo;</a>
-    Beheer van de StoringsIngaven ===test===
-    </p>
+    @*This card is default collapsed see fa-rotate-180 and display:none*@
+    <div class="card">
+        <div class="card-header bg-danger">
+            <h5 class="card-title text-white">
+                Ultralog Config
+                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
+            </h5>
+        </div>
+        <div class="card-body" style="display:none">
 
-    <a href="~/Welding/HiddenSpot/Index" class="btn btn-primary btn-sm">spot config&raquo;</a>
-    Beheer van de Hidden Spots, geoSpots, left/right spots
-    </p>
-    <a href="~/Welding/UltralogInspections/Index" class="btn btn-primary btn-sm">Change last ultralogmeasure&raquo;</a>
-    Beheer de laatste ultralogmetingen van de afgelopen 24 uur
-    </p>
+            <p>
+                <a href="~/Welding/QteamConfig/Config" class="btn btn-primary btn-sm">Beheer Qteam DB</a>
+                Beheer en Config van het Qteam
+            </p>
 
-
-
-</div>
+        </div>
 
     </div>
 </div>
