--- a/EqUiWebUi/Areas/Welding/Views/h_production_issues/Delete.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/h_production_issues/Delete.cshtml
@@ -4,47 +4,22 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+<h3>Ben je zeker deze te verwijderen?</h3>
 <div>
-    <h4>h_production_issues</h4>
+  
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.reportDate)
+            @Html.DisplayNameFor(model => model.rt_spottable.SpotName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.reportDate)
+            @Html.DisplayFor(model => model.rt_spottable.SpotName)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.quantity)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.quantity)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.lastBodyNbr)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.lastBodyNbr)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.remarks)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.remarks)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.c_production_issue.issue)
+            @Html.DisplayNameFor(model => model.c_production_issue)
         </dt>
 
         <dd>
@@ -60,12 +35,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.rt_spottable.SpotName)
+            @Html.DisplayNameFor(model => model.remarks)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.rt_spottable.SpotName)
+            @Html.DisplayFor(model => model.remarks)
         </dd>
+
+
+
+
 
     </dl>
 
