--- a/EqUiWebUi/Areas/Welding/Views/h_production_issues/Edit.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/h_production_issues/Edit.cshtml
@@ -4,20 +4,20 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Bewerk probleem ingave</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>h_production_issues</h4>
+  
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.id)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.spotid, "spotid", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.spotid, "spotnaam", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("spotid", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.spotid, "", new { @class = "text-danger" })
@@ -25,14 +25,14 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.startdate, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.startdate, "datum begonnen", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.startdate, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.startdate, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.enddate, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.enddate, "datum gemeld", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.enddate, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.enddate, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.reporterId, "reporterId", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.reporterId, "wie geraporteerd?", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("reporterId", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.reporterId, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.issueId, "issueId", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.issueId, "Welk probleem?", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("issueId", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.issueId, "", new { @class = "text-danger" })
@@ -59,7 +59,7 @@
         @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.quantity, "aantal problemen tussen de 2 gekozen datums", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -67,7 +67,7 @@
         @Html.LabelFor(model => model.lastBodyNbr, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.lastBodyNbr, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.lastBodyNbr, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.lastBodyNbr, "bodynummer", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -75,7 +75,7 @@
         @Html.LabelFor(model => model.remarks, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.remarks, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.remarks, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.remarks, "opmerkingen", new { @class = "text-danger" })
         </div>
     </div>
 
