--- a/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
@@ -18,6 +18,7 @@
     columns.Add(c => c.LocationTreeFilter1).Titled("LocationTreeFilter1");
     columns.Add(c => c.Area).Titled("Area");
     columns.Add(c => c.UserComment).Titled("UserComment").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.Ordinal).Titled("Ordinal").Css("d-none d-lg-table-cell");
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
