--- a/EqUiWebUi/Areas/Welding/Views/StoringsIngave/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/StoringsIngave/Index.cshtml
@@ -1,4 +1,10 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Welding.Models.StoringsIngave_new>
+﻿
+
+
+
+
+
+@model IEnumerable<EqUiWebUi.Areas.Welding.Models.StoringsIngave_new>
 
 @{
     ViewBag.Title = "Index";
