--- a/EqUiWebUi/Areas/Welding/Views/h_production_issues/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/h_production_issues/Index.cshtml
@@ -1,8 +1,28 @@
-﻿<p>
+﻿
+<div style="text-align:center">
+
+    <p>Klik op de foto om te vergroten:</p>
+</div>
+
+<!-- The four columns -->
+<div class="row">
+    <div class="column">
+        <img src="~/Content/images/deuropeningLinksV316.png" alt="V316 Links" style="width:60%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+        <img src="~/Content/images/vooruitkaderLinks.PNG" alt="Voorruit" style="width:70%" onclick="myFunction(this);">
+    </div>
+</div>
+
+<div class="container">
+    <span onclick="this.parentElement.style.display= 'none';" class="closebtn">&times;</span>
+    <img id="expandedImg" style="width:100%">
+    <div id="imgtext"></div>
+</div>
+
+<p>
     @Html.ActionLink("Click Here to insert a new spatter Issue", "Create")
 </p>
-
-
 
 @model IEnumerable<EqUiWebUi.Areas.Welding.Models.h_production_issues>
 
@@ -37,6 +57,71 @@
     pager.RowsPerPage = 5;
 }
         ).Sortable().Css("table-hover")
+
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 0;
+        font-family: Arial;
+    }
+
+    /* The grid: Four equal columns that floats next to each other */
+    .column {
+        float: left;
+        width: 20%;
+        padding: 10px;
+    }
+
+        /* Style the images inside the grid */
+        .column img {
+            opacity: 0.8;
+            cursor: pointer;
+        }
+
+            .column img:hover {
+                opacity: 1;
+            }
+
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    /* The expanding image container */
+    .container {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 250px;
+        top: 20%;
+        z-index: 10;
+    }
+
+    /* Expanding image text */
+    #imgtext {
+        position: absolute;
+        bottom: 10px;
+        left: 15px;
+        color: white;
+        font-size: 30px;
+    }
+
+    /* Closable button inside the expanded image */
+    .closebtn {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        color: yellow;
+        font-size: 45px;
+        cursor: pointer;
+    }
+</style>
+
 @section scripts{
     <script>
         //full with screen
@@ -44,3 +129,14 @@
         $("#allcontent").removeClass("container");
     </script>
 }
+
+<script>
+    function myFunction(imgs) {
+        var expandImg = document.getElementById("expandedImg");
+        var imgText = document.getElementById("imgtext");
+        expandImg.src = imgs.src;
+        imgText.innerHTML = imgs.alt;
+        expandImg.parentElement.style.display = "block";
+    }
+</script>
+
