fixed some issues in alertengine

--- a/EqUiWebUi/Areas/Supervision/Views/Table/PloegRapport.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/PloegRapport.cshtml
@@ -1,11 +1,11 @@
 ﻿@*set title*@
 @{
-    ViewBag.Title = "PloegRapport";
+    ViewBag.Title = "shiftReport";
 }
 <div class="card">
     <div class="card-header bg-dark text-white">
         <h4>
-            PloegRapport
+            shiftReport
             <a class="fas fa-wrench text-white clickable" id="OptionsPopover" data-toggle="popover" data-placement="bottom" title="Show options"></a>
             <a class="fas fa-info-circle text-white clickable MyPopovers" data-container="body" data-toggle="popover" data-placement="bottom" title="Show Legend" href="@Url.Action("_legend")"></a>
         </h4>
