--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -20,6 +20,13 @@
         +18439348395
         <i class="fas fa-envelope"></i> <a href="mailto:troy.olson@volvocars.com">troy.olson@volvocars.com</a><br />
     </address>
+    <strong>Site administrator</strong>
+    <address>
+        Kleeman, Darro<br />
+        <i class="fas fa-phone"></i>
+        +18439343705
+        <i class="fas fa-envelope"></i> <a href="mailto:darro.kleeman@volvocars.com">darro.kleeman@volvocars.com</a><br />
+    </address>
 </div>
 
     <hr />
