--- a/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Supervisie";
+    ViewBag.Title = "Supervision";
 }
 <div class="card">
     <div class="card-header bg-dark text-white">
         <h4>
-            Supervisie
+            Supervision
             <a class="fas fa-info-circle text-white clickable MyPopovers" data-container="body" data-toggle="popover" data-placement="bottom" title="Show Legend" href="@Url.Action("_legend")"></a>
         </h4>
     </div>
