sync ul + spatten + config

--- a/EqUiWebUi/Areas/Welding/Views/Spatter/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Spatter/Index.cshtml
@@ -25,7 +25,7 @@
                 @MyHtmlHelpers.EquiLink("/Welding/h_production_issues/Index", "far fa-flag", "Insert new issue", helperText: "maak hier melding van een spat/spike/braam probleem")
             <p>
             <p>
-                @MyHtmlHelpers.EquiLink("/Welding/Spatter/Index", "fab fa-searchengin", "follow up status reported issues", helperText: "Volg hier de status van de gemelde problemen")
+                @MyHtmlHelpers.EquiLink("/Alert/Alert/Listalerts?h_alert-c_triggers.alert-type-contains=spatter&h_alert-rows=20", "fab fa-searchengin", "follow up status reported issues", helperText: "Volg hier de status van de gemelde problemen")
             <p>
 
         </div>
