housekeeping retry and added ad groups in contact page

--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -86,7 +86,15 @@
     <hr />
     IIS host <strong>@ViewBag.hostname</strong>
     SQL host <strong>@ViewBag.sqlserver</strong>
-    Build  <strong>@ViewBag.build</strong>
+    <div>
+        Direct Sql access via AD group:<br />
+        [VCCNET\6308-APP-EQUI-DATA-RW-USER] Read only access<br />
+        [VCCNET\6308-APP-EQUI-DATA-R-USER] Read and write access<br />
+        <a href="https://volvocars.service-now.com/sp?id=sc_cat_item&sys_id=a67443d22b52e100e587593069da15c7">Add member AD group (SNOW)</a>
+    </div>
+    <hr />
+    <div>VCG server access: VCCNET\6308-APP-SERVERACCESS-GENSVW1178-ADMIN</div>
+    <div>VCCH server access: VCCNET\1020-SERVERAPP-ACCESS-TIPWEAR-PREDICTION-ADMIN</div>
 </div>
 
 <hr />
